# Bevypunk

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  wasm.sh  wasmbuild.sh
.cargo/: config.toml
Cyberpunk/src/: style.rs
app/: Cargo.toml
app/src/: main.rs
art/images/hud/: hud.aseprite
art/images/ui/: background.kra  cursor.ase  panel_full.kra  panel_menu.kra
art/images/ui/components/: button_sliced.ase  button_symetric.ase  button_symetric_sliced.ase  chevron.ase  switch_base.ase  switch_head.ase
art/movies/: intro.kra
art/ui/components/: button_symetric.ase
assets/: cursor.ase
assets/Lang/: en.toml
assets/images/: button_sliced.ase  button_symetric_sliced.ase  chevron.ase  settings.png~
assets/images/character_creator/: button.ase  chevron.ase
assets/images/hud/: hud.aseprite
assets/images/intro/: frame.kra
assets/images/main_menu/: board.png~  board1.png~  button.ase
assets/images/settings/: button_light.ase  switch_base.ase  switch_head.ase
assets/models/: person.glb
assets/settings/: buttons.png~  category_board.png~
crates/game_cameras/: Cargo.toml
crates/game_cameras/src/: lib.rs
crates/game_loading/: Cargo.toml
crates/game_loading/src/: lib.rs
crates/game_movies/: Cargo.toml
crates/game_movies/src/: lib.rs
crates/game_preferences/: Cargo.toml
crates/game_preferences/src/: lib.rs
crates/game_vfx/: Cargo.toml
crates/game_vfx/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  git-lfs.md  overview.md
src/: boilerplate.rs  components.rs  general.rs  interface.rs  logic.rs  main.rs  menu_main.rs  menu_settings.rs  routes.rs  style.rs  ui_mainmenu.rs  ui_settings.rs  ui_settings_buttons.rs  vfx.rs
src/components/: button.rs  main_button.rs  mod.rs  spinner.rs
src/interface/: components.rs  logic.rs  routes.rs
src/interface/components/: button.rs  main_menu_button.rs  switch.rs
src/interface/logic/: animation.rs  input.rs
src/interface/routes/: menu.rs  settings.rs
src/logic/: animation.rs  core.rs  hover.rs  input.rs  mod.rs
src/routes/: character_creator.rs  intro.rs  load_game.rs  main_menu.rs  menu.rs  mod.rs  settings.rs
src/routes/game/: avian.rs  controller.rs  entry.rs  input.rs  mod.rs  route.rs
web/: index.html
webbuild/: index.html
