[package]
  name = "bevypunk"
  authors     = ["IDEDARY"]
  version     = "0.0.1"
  edition     = "2021"
  resolver    = "2"
  license     = "MIT OR Apache-2.0"
  repository  = "https://github.com/idedary/bevypunk"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]

  # Required for VFX
  rand = "0.8.5"

  # Required for animations
  #vleue_kinetoscope = "0.1.1"

  # UI framework
  #bevy_lunex = "0.1.1"
  #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev", features=[] }
  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=["kira"] }

  # Audio
  bevy_kira_audio = { version = "0.20.0-rc.1" }

  # Physics
  bevy_rapier3d = "0.27.0-rc.1"

  # Game engine
  bevy = { version = "0.14.0-rc.4", default-features = false, features = [
    # Core
    "bevy_core_pipeline",
    "multi_threaded",
    "bevy_winit",
    #"bevy_audio",
    "bevy_sprite",
    "bevy_text",
    "webgl2",

    # Core formats
    #"vorbis",
    "png",

    # VFX
    "hdr",
    "tonemapping_luts",
    
    # 3D
    "jpeg",
    "bevy_gltf",

    "dynamic_linking",
  ] }

# Not WASM
[target.'cfg(not(target_family = "wasm"))'.dependencies]
  bevy_embedded_assets = { version = "0.11.0-rc.2" }

# Platform specific
[target.'cfg(unix)'.dependencies]
  bevy = { version = "0.14.0-rc.4", default-features = false, features = ["x11"] }
