#======================#
#=== WORKSPACE INFO ===#

[workspace]
  resolver = "2"
  members = ["app", "crates/*"]

[workspace.package]
  authors     = ["IDEDARY"]
  version     = "0.0.1"
  edition     = "2021"
  license     = "MIT OR Apache-2.0"
  repository  = "https://github.com/idedary/bevypunk"

#========================#
#=== PROFILE SETTINGS ===#

[profile.dev]
  debug = 0
  strip = "debuginfo"
  opt-level = 1

[profile.dev.package."*"]
  opt-level = 3

[profile.release]
  opt-level = 3
  panic = 'abort'
  debug = 0
  strip = true
  lto = "thin"
  codegen-units = 1

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[workspace.dependencies]

  # GAME CRATES
  game_cameras = { path = "crates/game_cameras" }
  game_loading = { path = "crates/game_loading" }
  game_movies = { path = "crates/game_movies" }
  game_preferences = { path = "crates/game_preferences" }
  game_vfx = { path = "crates/game_vfx" }

  #===========================#
  #=== GAME ENGINE SOURCE === #

  # GAME ENGINE
  bevy = { version = "^0.16.0", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "hdr",
    "multi_threaded",
    "png",
    "jpeg",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    #"webgpu",
    "x11",
  ]}
  log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

  #===============================#
  #=== GAME ENGINE EXTENSIONS === #

  # ASSETS
  vleue_kinetoscope = { git = "https://github.com/vleue/vleue_kinetoscope" }
  #bevy_embedded_assets = { version = "^0.12.0" }
  bevy_embedded_assets = { git = "https://github.com/vleue/bevy_embedded_assets" }

  # AUDIO
  #bevy_kira_audio = { version = "^0.22.0" }
  bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", branch = "bevy_main" }

  # USER INTERFACE
  bevy_lunex = { path = "../bevy_lunex/crate"}

  # PHYSICS
  #avian3d = { version = "^0.2.1" }

  #===========================#
  #=== RUST MISCELLANEOUS === #

  # OTHER
  rand = { version = "^0.9.1" }
  getrandom = { version = "0.3.2", features = ["wasm_js"]}
  clap = { version = "^4.5.37", features = ["derive"] }
