#====================#
#=== PACKAGE INFO ===#

[package]
  name = "game_preferences"
  authors.workspace = true
  version.workspace = true
  edition.workspace = true
  license.workspace = true
  repository.workspace = true

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[dependencies]

  # GAME CRATES
  game_cameras = { workspace = true }
  game_loading = { workspace = true }
  game_movies = { workspace = true }
  game_vfx = { workspace = true }

  # GAME ENGINE
  bevy = { workspace = true }

  # ASSETS
  vleue_kinetoscope = { workspace = true }
  bevy_embedded_assets = { workspace = true }

  # AUDIO
  bevy_kira_audio = { workspace = true }

  # USER INTERFACE
  bevy_lunex = { workspace = true }

  # PHYSICS
  avian3d = { workspace = true }
